--- a/config_bt.yml
+++ b/config_bt.yml
@@ -1,13 +1,14 @@
 datasets:
   auth_clean: data/clean
   synth: data/synt
+  # Need to be careful for BT stage 0 which has no synthetic data
 
 stages:
   - main
 
 main:
-  - auth_clean 0.5
-  - synth 0.5
+  - auth_clean 0.6
+  - synth 0.4
   - until auth_clean inf # until 5 epochs of auth_clean were seen
 
 modifiers:
