--- a/config/pipeline.iterative_bt.yml
+++ b/config/pipeline.iterative_bt.yml
@@ -10,16 +10,16 @@ seed: 42
 
 valid_dataset: "flores200.dev"
 
-skip-src-clean: True
-skip-tgt-clean: True
+skip_src_clean: True
+skip_tgt_clean: True
 
-python-venv-dir: "venv"
-marian-dir: "marian"
+python_venv_dir: "venv"
+marian_dir: "marian"
 
 opuscleaner_cmd: "opuscleaner-clean"
 decontaminate_path: "scripts/decontaminate.py"
 marian_config: "config/marian.train.teacher.12x12.yml"
 opustrainer_config: null
 
-decontaminate-min-length: 25
+decontaminate_min_length: 25
 vocab_size: 64000
