--- a/config/pipeline.simple.yml
+++ b/config/pipeline.simple.yml
@@ -8,13 +8,13 @@ seed: 42
 
 valid_dataset: "flores200.dev"
 
-python-venv-dir: "venv"
-marian-dir: "marian"
+python_venv_dir: "venv"
+marian_dir: "marian"
 
 opuscleaner_cmd: "opuscleaner-clean"
 decontaminate_path: "scripts/decontaminate.py"
 marian_config: "config/marian.train.teacher.12x6.yml"
 opustrainer_config: null
 
-decontaminate-min-length: 25
+decontaminate_min_length: 25
 vocab_size: 64000
