default marian configs - added chrf and bleu validation metrics

--- a/config/marian.train.teacher.12x12.yml
+++ b/config/marian.train.teacher.12x12.yml
@@ -211,6 +211,8 @@ ulr-dropout: 0
 ulr-softmax-temperature: 1
 valid-freq: 5000
 valid-metrics:
+  - chrf
+  - bleu
   - perplexity
 valid-reset-stalled: false
 early-stopping: 10
