--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,20 @@
+#opuscleaner==0.4.0
+opustrainer
+bicleaner-ai==2.2.2
+bicleaner
+bifixer==0.8.9
+opustrainer==0.2
+mtdata==0.4.0
+fasttext
+fugashi[unidic-lite]==1.1.2
+hanziconv==0.3.2
+git+https://github.com/Helsinki-NLP/OpusFilter.git@develop
+pycld2==0.41
+sacrebleu
+sacremoses
+spacy-pkuseg
+more_itertools
+requests
+sacrebleu
 typing-extensions
+hyperqueue
