opuspocus/runners: initial implementation (not stable)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,18 @@
 #opuscleaner==0.4.0
-opustrainer
-bicleaner-ai==2.2.2
 bicleaner
+bicleaner-ai==2.2.2
 bifixer==0.8.9
-opustrainer==0.2
-mtdata==0.4.0
 fasttext
 fugashi[unidic-lite]==1.1.2
-hanziconv==0.3.2
 git+https://github.com/Helsinki-NLP/OpusFilter.git@develop
+hanziconv==0.3.2
+hyperqueue==0.18.0
+more_itertools
+mtdata==0.4.0
+opustrainer==0.2
 pycld2==0.41
+requests
 sacrebleu
 sacremoses
 spacy-pkuseg
-more_itertools
-requests
-sacrebleu
 typing-extensions
-hyperqueue
