runner + pipeline refactor: Bash runner now working
- train_model step is currently not compatible with bash runner!
- slurm, hyperqueue runners are still in the process of refactor

--- a/config/pipeline.opuscleaner-step.yml
+++ b/config/pipeline.opuscleaner-step.yml
@@ -10,7 +10,7 @@ global:
   opuscleaner_cmd: opuscleaner-clean
 
 pipeline:
-  pipeline_dir: experiments/${global.src_lang}-${global.tgt_lang}/opuscleaner-only.${global.src_lang}-${global.tgt_lang}
+  pipeline_dir: experiments/${global.src_lang}-${global.tgt_lang}/opuscleaner-only
   steps:
     - step: raw
       step_label: raw.${global.src_lang}-${global.tgt_lang}
