--- a/config/pipeline.full.simple.yml
+++ b/config/pipeline.full.simple.yml
@@ -22,7 +22,7 @@ global:
   vocab_size: 64000
 
 pipeline:
-  pipeline_dir: experiments/${global.src_lang}-${global.tgt_lang}/full.simple.${global.src_lang}-${global.tgt_lang}
+  pipeline_dir: experiments/${global.src_lang}-${global.tgt_lang}/full.simple
   steps:
     # Preprocess
     - step: raw
@@ -60,7 +60,7 @@ pipeline:
       src_lang: ${global.src_lang}
       tgt_lang: ${global.tgt_lang}
       datasets: 
-        - clean
+        - clean.${global.src_lang}-${global.tgt_lang}
       marian_dir: ${global.marian_dir}
       corpus_step: gather.${global.src_lang}-${global.tgt_lang}
       vocab_size: ${global.vocab_size}
