step.command refactory (using Python code instead of Bash)
- also moved scripts/decontaminate.py to tools (can be still used
  externally)
- added example scripts for preprocessing and training
- valid/test should now also be loaded as CorpusStep
- adjusted bash runner to work with the refactored Step code
- TODO: Slurm, HyperQueue runners
- TODO: train_step resubmission
- TODO: translate step, eval step...
- TODO: etc.

--- a/config/pipeline.preprocess.simple.yml
+++ b/config/pipeline.preprocess.simple.yml
@@ -6,24 +6,35 @@ global:
   raw_data_dir: data/${.src_lang}-${.tgt_lang}/raw
   valid_data_dir: data/${.src_lang}-${.tgt_lang}/valid
   test_data_dir: data/${.src_lang}-${.tgt_lang}/test
-  valid_dataset: flores200.dev
+  valid_dataset: flores200.dev.${.src_lang}-${.tgt_lang}
 
-  opuspocus_python_venv_dir: opuspocus-venv
   opuscleaner_python_venv_dir: opuscleaner-venv
 
-  opuscleaner_cmd: opuscleaner-clean
-
-  decontaminate_path: scripts/decontaminate.py
   decontaminate_min_length: 25
 
 pipeline:
   pipeline_dir: experiments/${global.src_lang}-${global.tgt_lang}/preprocess.simple
   steps:
+    # Load Datasets
     - step: raw
       step_label: raw.${global.src_lang}-${global.tgt_lang}
       src_lang: ${global.src_lang}
       tgt_lang: ${global.tgt_lang}
       raw_data_dir: ${global.raw_data_dir}
+    - step: raw
+      step_label: valid.${global.src_lang}-${global.tgt_lang}
+      src_lang: ${global.src_lang}
+      tgt_lang: ${global.tgt_lang}
+      raw_data_dir: ${global.valid_data_dir}
+      compressed: false
+    - step: raw
+      step_label: test.${global.src_lang}-${global.tgt_lang}
+      src_lang: ${global.src_lang}
+      tgt_lang: ${global.tgt_lang}
+      raw_data_dir: ${global.test_data_dir}
+      compressed: false
+
+    # Preprocessing
     - step: clean
       step_label: clean.${global.src_lang}-${global.tgt_lang}
       src_lang: ${global.src_lang}
@@ -35,17 +46,13 @@ pipeline:
       src_lang: ${global.src_lang}
       tgt_lang: ${global.tgt_lang}
       previous_corpus_step: clean.${global.src_lang}-${global.tgt_lang}
-      python_venv_dir: ${global.opuspocus_python_venv_dir}
-      valid_data_dirs:
-        - ${global.valid_data_dir}
-        - ${global.test_data_dir}
-      decontaminate_path: ${global.decontaminate_path}
+      valid_data_step: valid.${global.src_lang}-${global.tgt_lang}
+      test_data_step: test.${global.src_lang}-${global.tgt_lang}
       min_length: ${global.decontaminate_min_length}
     - step: gather
       step_label: gather.${global.src_lang}-${global.tgt_lang}
       src_lang: ${global.src_lang}
       tgt_lang: ${global.tgt_lang}
       previous_corpus_step: decontaminate.${global.src_lang}-${global.tgt_lang}
-      python_venv_dir: ${global.opuspocus_python_venv_dir}
   default_targets:
     - gather.${global.src_lang}-${global.tgt_lang}
