--- a/config/pipeline.train.simple.yml
+++ b/config/pipeline.train.simple.yml
@@ -4,18 +4,12 @@ global:
   tgt_lang: nn
 
   # we set the "raw" data dir to the output of the preprocess pipeline
-  raw_data_dir: experiments/${.src_lang}-${.tgt_lang}/preprocess.simple.${.src_lang}-${.tgt_lang}/gather.${.src_lang}-${.tgt_lang}
+  raw_data_dir: experiments/${.src_lang}-${.tgt_lang}/preprocess_only.simple/gather.${.src_lang}-${.tgt_lang}/output
+  valid_data_dir: experiments/${.src_lang}-${.tgt_lang}/preprocess_only.simple/valid.${.src_lang}-${.tgt_lang}/output
+  test_data_dir: experiments/${.src_lang}-${.tgt_lang}/preprocess_only.simple/test.${.src_lang}-${.tgt_lang}/output
 
-  valid_data_dir: data/${.src_lang}-${.tgt_lang}/valid
-  test_data_dir: data/${.src_lang}-${.tgt_lang}/test
-  valid_dataset: flores200.dev
+  valid_dataset_prefix: flores200.dev
 
-  opuspocus_python_venv_dir: opuspocus-venv
-  opuscleaner_python_venv_dir: opuscleaner-venv
-
-  opuscleaner_cmd: opuscleaner-clean
-
-  decontaminate_path: scripts/decontaminate.py
   decontaminate_min_length: 25
 
   marian_dir: marian_dir 
@@ -24,14 +18,24 @@ global:
   vocab_size: 64000
 
 pipeline:
-  pipeline_dir: experiments/${global.src_lang}-${global.tgt_lang}/train.simple
+  pipeline_dir: experiments/${global.src_lang}-${global.tgt_lang}/train_only.simple
   steps:
-    # Load Data
+    # Load Datasets
     - step: raw
       step_label: gather.${global.src_lang}-${global.tgt_lang}
       src_lang: ${global.src_lang}
       tgt_lang: ${global.tgt_lang}
       raw_data_dir: ${global.raw_data_dir}
+    - step: raw
+      step_label: valid.${global.src_lang}-${global.tgt_lang}
+      src_lang: ${global.src_lang}
+      tgt_lang: ${global.tgt_lang}
+      raw_data_dir: ${global.valid_data_dir}
+    - step: raw
+      step_label: test.${global.src_lang}-${global.tgt_lang}
+      src_lang: ${global.src_lang}
+      tgt_lang: ${global.tgt_lang}
+      raw_data_dir: ${global.test_data_dir}
 
     # Train
     - step: generate_vocab
@@ -45,26 +49,26 @@ pipeline:
       vocab_size: ${global.vocab_size}
     - step: train_model
       step_label: train_model.${global.src_lang}-${global.tgt_lang}
-      marian_dir: ${global.marian_dir}
-      valid_data_dir: ${global.valid_data_dir}
-      python_venv_dir: ${global.opuspocus_python_venv_dir}
       src_lang: ${global.src_lang}
       tgt_lang: ${global.tgt_lang}
+      marian_dir: ${global.marian_dir}
       marian_config: ${global.marian_config}
       opustrainer_config: null
       vocab_step: generate_vocab.${global.src_lang}-${global.tgt_lang}
       train_corpus_step: gather.${global.src_lang}-${global.tgt_lang}
+      valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
+      valid_dataset: ${global.valid_dataset_prefix}.${global.src_lang}-${global.tgt_lang}
     - step: train_model
       step_label: train_model.${global.tgt_lang}-${global.src_lang}
-      marian_dir: ${global.marian_dir}
-      valid_data_dir: ${global.valid_data_dir}
-      python_venv_dir: ${global.opuspocus_python_venv_dir}
       src_lang: ${global.tgt_lang}
       tgt_lang: ${global.src_lang}
+      marian_dir: ${global.marian_dir}
       marian_config: ${global.marian_config}
       opustrainer_config: null
       vocab_step: generate_vocab.${global.src_lang}-${global.tgt_lang}
       train_corpus_step: gather.${global.src_lang}-${global.tgt_lang}
+      valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
+      valid_dataset: ${global.valid_dataset_prefix}.${global.tgt_lang}-${global.src_lang}
 
   default_targets:
     - train_model.${global.src_lang}-${global.tgt_lang}
