--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,8 @@
-#opuscleaner==0.4.0
-bicleaner
-bicleaner-ai==2.2.2
-bifixer==0.8.9
-fasttext
-fugashi[unidic-lite]==1.1.2
-git+https://github.com/Helsinki-NLP/OpusFilter.git@develop
-hanziconv==0.3.2
 hyperqueue==0.18.0
 more_itertools
-mtdata==0.4.0
 omegaconf
 opustrainer==0.2
+psutil
 pycld2==0.41
 requests
 sacrebleu
