--- a/.github/workflows/run_test.yaml
+++ b/.github/workflows/run_test.yaml
@@ -1,6 +1,6 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-name: Testing (CI/CD)
+name: Run Pytest Unit Tests
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
@@ -34,11 +34,17 @@ jobs:
       - name: Install requirements
         run: |
           python -m pip install --upgrade pip setuptools
-          pip install pre-commit ruff pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f requirements-all.txt ]; then pip install -r requirements-all.txt; fi
 
-      - name: Lint with pre-commit 
-        run: pre-commit run --all-files
+      - name: Lint with Pre-commit 
+        run: |
+          pre-commit run --all-files
 
-      - name: Test with pytest
-        run: pytest tests/
+      - name: Test with Pytest
+        run: |
+          coverage run -m pytest -v -s
+
+      - name: Generate Coverage Report
+        run: |
+          coverage report -m
