--- a/config/pipeline.train.backtranslation.yml
+++ b/config/pipeline.train.backtranslation.yml
@@ -142,6 +142,34 @@ pipeline:
       valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
       valid_dataset: ${global.valid_dataset_prefix}.${global.tgt_lang}-${global.src_lang}
 
+    # Eval (iter 2)
+    - step: translate
+      step_label: translate_test.${global.src_lang}-${global.tgt_lang}
+      src_lang: ${global.src_lang}
+      tgt_lang: ${global.tgt_lang}
+      previous_corpus_step: test.${global.src_lang}-${global.tgt_lang}
+      model_step: tune_bt_model.${global.src_lang}-${global.tgt_lang}
+      marian_dir: ${global.marian_dir}
+    - step: evaluate
+      step_label: evaluate_test.${global.src_lang}-${global.tgt_lang}
+      src_lang: ${global.src_lang}
+      tgt_lang: ${global.tgt_lang}
+      previous_corpus_step: translate_test.${global.src_lang}-${global.tgt_lang}
+      reference_corpus_step: test.${global.src_lang}-${global.tgt_lang}
+    - step: translate
+      step_label: translate_test.${global.tgt_lang}-${global.src_lang}
+      src_lang: ${global.tgt_lang}
+      tgt_lang: ${global.src_lang}
+      previous_corpus_step: test.${global.src_lang}-${global.tgt_lang}
+      model_step: tune_bt_model.${global.tgt_lang}-${global.src_lang}
+      marian_dir: ${global.marian_dir}
+    - step: evaluate
+      step_label: evaluate_test.${global.tgt_lang}-${global.src_lang}
+      src_lang: ${global.tgt_lang}
+      tgt_lang: ${global.src_lang}
+      previous_corpus_step: translate_test.${global.tgt_lang}-${global.src_lang}
+      reference_corpus_step: test.${global.src_lang}-${global.tgt_lang}
+
   default_targets:
-    - tune_bt_model.${global.src_lang}-${global.tgt_lang}
-    - tune_bt_model.${global.tgt_lang}-${global.src_lang}
+    - evaluate_test.${global.src_lang}-${global.tgt_lang}
+    - evaluate_test.${global.tgt_lang}-${global.src_lang}
