fixed naming in config/pipeline.* files

--- a/config/pipeline.train.backtranslation.yml
+++ b/config/pipeline.train.backtranslation.yml
@@ -155,7 +155,7 @@ pipeline:
       step_label: evaluate_test.${global.src_lang}-${global.tgt_lang}
       src_lang: ${global.src_lang}
       tgt_lang: ${global.tgt_lang}
-      previous_corpus_step: translate_test.${global.src_lang}-${global.tgt_lang}
+      translated_corpus_step: translate_test.${global.src_lang}-${global.tgt_lang}
       reference_corpus_step: test.${global.src_lang}-${global.tgt_lang}
     - step: translate
       step_label: translate_test.${global.tgt_lang}-${global.src_lang}
@@ -168,7 +168,7 @@ pipeline:
       step_label: evaluate_test.${global.tgt_lang}-${global.src_lang}
       src_lang: ${global.tgt_lang}
       tgt_lang: ${global.src_lang}
-      previous_corpus_step: translate_test.${global.tgt_lang}-${global.src_lang}
+      translated_corpus_step: translate_test.${global.tgt_lang}-${global.src_lang}
       reference_corpus_step: test.${global.src_lang}-${global.tgt_lang}
 
   default_targets:
