--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,6 @@ Issues = "https://github.com/hplt-project/opuspocus/issues"
 Repository = "https://github.com/hplt-project/OpusPocus.git"
 
 [tool.pytest.ini_options]
+log_cli=true
+log_level="CRITICAL"
 pythonpath = ["."]
