--- a/config/pipeline.train.simple.yml
+++ b/config/pipeline.train.simple.yml
@@ -11,7 +11,7 @@ global:
   valid_data_dir: ${.preprocess_pipeline_dir}/valid.${.src_lang}-${.tgt_lang}/output
   test_data_dir: ${.preprocess_pipeline_dir}/test.${.src_lang}-${.tgt_lang}/output
 
-  valid_dataset_prefix: flores200.dev.${.src_lang}-${.tgt_lang}
+  valid_dataset: flores200.dev.${.src_lang}-${.tgt_lang}
 
   decontaminate_min_length: 25
 
@@ -60,7 +60,7 @@ pipeline:
       vocab_step: generate_vocab.${global.src_lang}-${global.tgt_lang}
       train_corpus_step: gather.${global.src_lang}-${global.tgt_lang}
       valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
-      valid_dataset: ${global.valid_dataset_prefix}
+      valid_dataset: ${global.valid_dataset}
     - step: train_model
       step_label: train_model.${global.tgt_lang}-${global.src_lang}
       src_lang: ${global.tgt_lang}
@@ -71,7 +71,7 @@ pipeline:
       vocab_step: generate_vocab.${global.src_lang}-${global.tgt_lang}
       train_corpus_step: gather.${global.src_lang}-${global.tgt_lang}
       valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
-      valid_dataset: ${global.valid_dataset_prefix}
+      valid_dataset: ${global.valid_dataset}
 
     # Eval
     - step: translate
