--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ name = "opuspocus"
 description = "Modular NLP pipeline manager."
 readme = "README.md"
 requires-python = ">=3.7"
-license = "MIT"
+license = {text = "MIT"}
 keywords = ["OPUS", "HPLT", "pipeline manager"]
 authors = [{ name = "Dušan Variš", email = "varis@ufal.mff.cuni.cz" }]
 classifiers = [
