--- a/config/pipeline.train.backtranslation.yml
+++ b/config/pipeline.train.backtranslation.yml
@@ -1,7 +1,7 @@
 global:
   seed: 42
   src_lang: en
-  tgt_lang: nn
+  tgt_lang: is
 
   preprocess_pipeline_dir: experiments/${.src_lang}-${.tgt_lang}/preprocess_only
 
@@ -16,11 +16,11 @@ global:
 
   decontaminate_min_length: 25
 
-  marian_dir: marian_dir 
+  marian_dir: /home/bmalik/marian 
   marian_config: config/marian.train.teacher.base.yml
 
   shard_size: 10000
-  vocab_size: 64000
+  vocab_size: 32000
 
 pipeline:
   pipeline_dir: experiments/${global.src_lang}-${global.tgt_lang}/train_only.backtranslation
