style(all): add rule `YTT`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,10 +30,11 @@ pythonpath = ["."]
 line-length = 120
 include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
 lint.select = [
-  "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
-  "E",  # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
-  "W",  # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
-  "I",  # https://docs.astral.sh/ruff/rules/#isort-i
-  "N",  # https://docs.astral.sh/ruff/rules/#pep8-naming-n
-  "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
+  "F",   # https://docs.astral.sh/ruff/rules/#pyflakes-f
+  "E",   # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
+  "W",   # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
+  "I",   # https://docs.astral.sh/ruff/rules/#isort-i
+  "N",   # https://docs.astral.sh/ruff/rules/#pep8-naming-n
+  "UP",  # https://docs.astral.sh/ruff/rules/#pyupgrade-up
+  "YTT", # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
 ]
