--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ lint.select = [
   "UP",  # https://docs.astral.sh/ruff/rules/#pyupgrade-up
   "YTT", # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
   "ANN", # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
+  "BLE", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-ble
+  "FBT", # https://docs.astral.sh/ruff/rules/#flake8-bandit-fbt
 ]
 
 lint.ignore = [
