--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ lint.select = [
   "A",   # https://docs.astral.sh/ruff/rules/#flake8-annotations-a
   "C4",  # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
   "EM",  # https://docs.astral.sh/ruff/rules/#flake8-eradicate-em
+  "ISC", # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
 ]
 
 lint.ignore = [
