--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ lint.select = [
   "C4",  # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
   "EM",  # https://docs.astral.sh/ruff/rules/#flake8-eradicate-em
   "ISC", # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
+  "ICN",
 ]
 
 lint.ignore = [
