style(all): add `PYI` rule

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,8 @@ lint.select = [
   "ICN", # https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn
   "LOG", # https://docs.astral.sh/ruff/rules/#flake8-logging-log
   "G",   # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
-  "T20",
+  "T20", # https://docs.astral.sh/ruff/rules/#flake8-print-t20
+  "PYI",
 ]
 
 lint.ignore = [
