--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ Repository = "https://github.com/hplt-project/OpusPocus.git"
 
 [tool.pytest.ini_options]
 log_cli = true
-log_level = "CRITICAL"
+log_level = "INFO"
 pythonpath = ["."]
 
 [tool.ruff]
