--- a/config/pipeline.preprocess.yml
+++ b/config/pipeline.preprocess.yml
@@ -1,7 +1,7 @@
 global:
   seed: 42
   src_lang: en
-  tgt_lang: nn
+  tgt_lang: eu
 
   raw_para_dir: data/${.src_lang}-${.tgt_lang}/raw
   # TODO: Replace the mono dirs with proper directories
