fixed default paths in pipeline configs to comply with README paths

--- a/config/pipeline.train.simple.yml
+++ b/config/pipeline.train.simple.yml
@@ -3,7 +3,7 @@ global:
   src_lang: en
   tgt_lang: eu
 
-  preprocess_pipeline_dir: experiments/${.src_lang}-${.tgt_lang}/preprocess.example
+  preprocess_pipeline_dir: experiments/${.src_lang}-${.tgt_lang}/preprocess.simple
 
   # We set the "raw" data dir to the output of the preprocess pipeline
   raw_data_dir: ${.preprocess_pipeline_dir}/gather.${.src_lang}-${.tgt_lang}/output
