--- a/config/pipeline.preprocess.yml
+++ b/config/pipeline.preprocess.yml
@@ -16,7 +16,7 @@ global:
   decontaminate_min_length: 25
 
 pipeline:
-  pipeline_dir: experiments/${global.src_lang}-${global.tgt_lang}/preprocess.example
+  pipeline_dir: experiments/${global.src_lang}-${global.tgt_lang}/preprocess.simple
   steps:
     # Load Datasets
     - step: raw
