--- a/config/marian.train.teacher.base.yml
+++ b/config/marian.train.teacher.base.yml
@@ -15,9 +15,9 @@ save-freq: 5000u
 max-length: 250
 max-length-crop: false
 shuffle: batches
-sharding: global
-sync-freq: 200u
-cpu-threads: 0
+#sharding: global
+#sync-freq: 200u
+#cpu-threads: 0
 mini-batch: 4096
 mini-batch-words: 0
 mini-batch-fit: true
