unit test and pre-commit compliance

--- a/config/pipeline.train.backtranslation.yml
+++ b/config/pipeline.train.backtranslation.yml
@@ -20,6 +20,7 @@ global:
   marian_dir: marian_dir 
   marian_config: config/marian.train.teacher.base.yml
 
+  max_epochs: null
   shard_size: 10000
   vocab_size: 64000
 
@@ -71,6 +72,7 @@ pipeline:
       marian_dir: ${global.marian_dir}
       marian_config: ${global.marian_config}
       opustrainer_config: null
+      max_epochs: ${global.max_epochs}
       vocab_step: generate_vocab.${global.src_lang}-${global.tgt_lang}
       train_corpus_step: gather.${global.src_lang}-${global.tgt_lang}
       valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
@@ -86,6 +88,7 @@ pipeline:
       marian_dir: ${global.marian_dir}
       marian_config: ${global.marian_config}
       opustrainer_config: null
+      max_epochs: ${global.max_epochs}
       vocab_step: generate_vocab.${global.src_lang}-${global.tgt_lang}
       train_corpus_step: gather.${global.src_lang}-${global.tgt_lang}
       valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
@@ -135,6 +138,7 @@ pipeline:
       marian_dir: ${global.marian_dir}
       marian_config: ${global.marian_config}
       opustrainer_config: null
+      max_epochs: ${global.max_epochs}
       vocab_step: generate_vocab.${global.src_lang}-${global.tgt_lang}
       train_corpus_step: merge.${global.src_lang}-${global.tgt_lang}
       valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
@@ -152,6 +156,7 @@ pipeline:
       marian_dir: ${global.marian_dir}
       marian_config: ${global.marian_config}
       opustrainer_config: null
+      max_epochs: ${global.max_epochs}
       vocab_step: generate_vocab.${global.src_lang}-${global.tgt_lang}
       train_corpus_step: merge.${global.tgt_lang}-${global.src_lang}
       valid_corpus_step: valid.${global.src_lang}-${global.tgt_lang}
